<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="about_dialog_contact">Contact</string>
	<string name="about_dialog_rate">Rate</string>
	<string name="about_dialog_text">You can show your support by rating the app in Google Play or help translating it into your own language.</string>
	<string name="about_dialog_translate">Help translate</string>
	<string name="about_dialog_translators"><b>Translator:</b> Daniel Piñeiro</string>
	<string name="ant_capable">ANT Capable</string>
	<string name="ant_hal_service">ANT HAL service:</string>
	<string name="ant_plugins">ANT+ Plugins:</string>
	<string name="ant_radio_service">ANT Radio Service:</string>
	<string name="ant_support_version_info">ANT support version info</string>
	<string name="ant_usb_service">ANT USB Service:</string>
	<string name="ant_usb_service_installed">ANT USB Service installed:</string>
	<string name="app_name">ANT Tester</string>
	<string name="built_in_ant_detected">Built-in ANT detected:</string>
	<string name="built_in_firmware">Built-in firmware:</string>
	<string name="error_title">Error</string>
	<string name="googleplay_listing_full_description">With this application you can check the different ANT+™ capabilities your device supports.\nIt also offers links to download/uninstall the different ANT+™ packages.</string>
	<string name="googleplay_listing_short_description">Test your device for ANT+™ capabilities</string>
	<string name="menu_about">About</string>
	<string name="menu_test">Test ANT Support</string>
	<string name="no">No</string>
	<string name="no_service">No service</string>
	<string name="not_available">N/A</string>
	<string name="not_found">Not found</string>
	<string name="requires_ars">Requires ARS</string>
	<string name="usb_devices">USB Devices</string>
	<string name="usb_on_the_go_support">USB On-The-Go support:</string>
	<string name="use_ant_hardware_permission">✘ Permission > Additional permission > use ANT hardware</string>
	<string name="yes">Yes</string>
</resources>
