<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dialog_text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:onClick="aboutClick"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/translatorTV"
        android:text="@string/about_dialog_translators"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_rate"
        android:drawablePadding="20dp"
        android:paddingRight="20dp"
        android:text="@string/about_dialog_rate"
        android:id="@+id/rate_button"
        android:gravity="fill_vertical"
        android:onClick="aboutClick"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_translate"
        android:drawablePadding="20dp"
        android:paddingRight="20dp"
        android:text="@string/about_dialog_translate"
        android:id="@+id/translate_button"
        android:gravity="fill_vertical"
        android:onClick="aboutClick"/>
</LinearLayout>
</ScrollView>
